Correct HTML structure and logo file extension
Fixed typos and updated logo file extension.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- NAVBAR -->
 <header>
   <div class="brand">
-    <img src="logo.png" alt="Sky Reach Creatives Logo">
+    <img src="logo.png.jpeg" alt="Sky Reach Creatives Logo">
     <span>Sky Reach Creatives</span>
   </div>
 </header>
@@ -37,9 +37,9 @@
 
 <!-- PORTFOLIO -->
 <section class="portfolio">
-  <h2>Our Work</h2>
+  <h2>Our Portfolio</h2>
   <video controls>
-    <source src="portfolio.mp4" type="video/mp4">
+    <source src="portfolio.mp4.mp4" type="video/mp4">
     Your browser does not support video.
   </video>
 </section>
@@ -92,7 +92,7 @@
     <option>Graphic Design & Thumbnails</option>
   </select>
   
-    <button type="submit">Send Message</button>
+    <button type="submit">Submit</button>
   </form>
 
   <p class="direct">
@@ -102,8 +102,10 @@
 </section>
 
 <footer>
-  © 2026 Sky Reach Creatives. All rights reserved.
+  © 2026 Sky Reach Creatives. All rights reserved. <br>
+  <span class="founder">Founded by Kaif</span>
 </footer>
+
 
 <!-- WHATSAPP -->
 <a href="https://wa.me/917456833252" class="whatsapp" target="_blank">💬</a>
@@ -111,3 +113,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
