Update contact section and add form note
Fixed form note and improved contact section.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
   
     <button type="submit">Submit</button>
   </form>
+  <p class="form-note">
+  Fill the form to get our professional services.
+</p>
+
 
   <p class="direct">
     📧 skyreachcreatives@gmail.com <br>
@@ -113,4 +117,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
